SERVER-53499 User Management commands must set apiVersion internally